<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">QuizApp</string>
    <string name="login">Giriş yap</string>
    <string name="enterEmail">Email</string>
    <string name="password">Şifre</string>
    <string name="register">Şimdi kayıt ol!</string>
    <string name="back">Geri Dön</string>
    <string name="sigup">Kayıt ol</string>
    <string name="nickname">İsim / takma isim</string>
    <string name="forgotpass">Şifremi unuttum</string>
    <string name="sendresetmail">Sıfırlama adresi gönder</string>
    <string name="liveQuiz">Bilgi Yarışması - CANLI</string>
    <string name="leaderboard">Liderlik Tablosu</string>
    <string name="pleaseentervalidemail">Lütfen geçerli bir email adresi giriniz!</string>
    <string name="activeQuizes">Açık Bilgi Yarışmaları</string>
    <string name="twitter_le_giri_yap">Twitter İle Giriş Yap</string>
    <string name="CONSUMER_KEY">y0JfGrWdFBPCoWOVgMSzL9KQp</string>
    <string name="CONSUMER_SECRET">nJst3CoJ5pL2UvN8iCzzHIikFC7IZL9DWUGiuu4zOA7jHKtkVC</string>
    <string name="proifle">Profil</string>
</resources>

