<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/activity_loading" />

    <LinearLayout
        android:visibility="visible"
        android:orientation="vertical"
        android:padding="15dp"
        android:id="@+id/ly_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:fontFamily="@font/cdbold"
        android:text="@string/login"
        android:textSize="18dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_emailLogin"
        android:hint="@string/enterEmail"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edit_text_states"
        android:textColorHighlight="@color/colorPrimary"
        android:fontFamily="@font/cdregular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_passLogin"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_states"
        android:fontFamily="@font/cdregular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/bt_signIn"
        android:text="@string/login"
        android:fontFamily="@font/cdbold"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_forgotPass"
        android:fontFamily="@font/cdbold"
        android:layout_marginTop="15dp"
        android:text="@string/forgotpass"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/ly_resetPass"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_emailForPass"
            android:hint="@string/enterEmail"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:padding="15dp"
            android:layout_margin="5dp"
            android:drawablePadding="10dp"
            android:background="@drawable/edit_text_states"
            android:textColorHighlight="@color/colorPrimary"
            android:fontFamily="@font/cdregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/bt_sendResetLink"
            android:text="@string/sendresetmail"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cdbold"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>